--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ai": "^4.3.17",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "typescript": "^5",
